--- a/HTML/Kursova/css/bases.css
+++ b/HTML/Kursova/css/bases.css
@@ -63,3 +63,18 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.wrapper-contact {
+    padding-top: 4.25rem;
+    padding-bottom: 4.25rem;
+    background-color: #fff;
+}
+
+.wrapper-footer {
+    padding-top: 4.25rem;
+    padding-bottom: 4.25rem;
+    background-image: linear-gradient(90deg, rgba(17,15,50,0.9) 0%, rgba(62,43,101,0.9) 100%), url(../img/table.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
