--- a/HTML/Products/css/main.css
+++ b/HTML/Products/css/main.css
@@ -31,8 +31,11 @@
 }
 
 .figure {
-    font-size: 0;
-    width: 16rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    flex-basis: 23%;
     margin-bottom: 1.875rem;
 }
 
@@ -41,8 +44,9 @@
 }
 
 .figure-img {
-    width: 16rem;
+    width: 100%;
     height: 17.5rem;
+
     background-color: #E9F0FD;
 }
 
