--- a/HTML/Hw5/css/main.css
+++ b/HTML/Hw5/css/main.css
@@ -1,5 +1,5 @@
 .main-title {
-    font-size: 48px;
+    font-size: 3rem;
     color: #515151;
     font-family: "Roboto-Black", sans-serif;
     text-align: center;
@@ -9,10 +9,10 @@
 .main-title::after {
     display: block;
     content: "";
-    margin: 30px auto 80px;
+    margin: 1.875rem auto 5rem;
     background-color: #1ABC9C;
-    width: 164px;
-    height: 8px;
+    width: 10.25rem;
+    height: 0.5rem;
 }
 
 .main-gallery {
@@ -22,6 +22,9 @@
 
 .body-figure {
     position: relative;
+    display: flex;
+    justify-content: center;
+    
     flex-basis: 23%;
 
 }
@@ -49,61 +52,59 @@
 }
 
 .world {
-    font-size: 18px;
+    font-size: 1.125rem;
     font-family: "Roboto-Light", sans-serif;
     color: #fff;
     background-color: #323232;
-    padding: 14px;
+    padding: 0.875rem;
     text-transform: uppercase;
     width: 100%;
 }
 
 .price {
-    font-size: 18px;
+    font-size: 1.125rem;
     font-family: "Roboto-Light", sans-serif;
     color: #fff;
-    padding: 14px;
+    padding: 0.875rem;
     background-color: #8C8C8C;
 }
 
 .figure-socials {
     display: none;
-    position: absolute;
-    top: 42%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    background-color: #737373;
-    opacity: 0.8;
-    width: 90%;
-    height: 74%;
-
-
 
 }
 
 .body-figure:hover>.figure-socials {
-    display: block;
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    background-color: #737373;
+    opacity: 0.8;
+    width: 90%;
+    height: 74%;
+    top: 5%;
+    
 }
 
 .figure-socials-icon {
-    position: absolute;
-    top: 22%;
-    left: 14%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-basis: 72%;
+    
+
 }
 
 .icon {
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 3.125rem;
+    height: 3.125rem;
     border: 1px solid #fff;
-    margin-right: 8px;
-    margin-bottom: 6px;
+    margin-bottom: 0.375rem;
+
 }
 
-.icon:last-child {
-    margin-right: 0;
-}
 
 .icon:hover {
     background-color: #1ABC9C;
@@ -114,8 +115,8 @@
     align-items: center;
     border: 1px solid #fff;
     background-color: #323232;
-    width: 174px;
-    
+    width: 100%;
+
 }
 
 .icon-check:hover {
@@ -126,7 +127,7 @@
 .icon-text {
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #fff;
     font-family: "OpenSans", sans-serif;
 }
@@ -151,8 +152,8 @@
 
 .icon-basket {
     display: block;
-    width: 50px;
-    height: 50px;
+    width: 3.125rem;
+    height: 3.125rem;
     background-image: url(../icons/basket.png);
     background-position: center;
     background-repeat: no-repeat;
