--- a/HTML/Hw6/css/section2.css
+++ b/HTML/Hw6/css/section2.css
@@ -26,12 +26,12 @@
 
 
 
-.element-figure:hover > .figure {
+/* .element-figure:hover > .figure {
     
     top: 0;
     left: 0;
     transform: translate(-10px, -10px);
-}
+} */
 
 
 
