--- a/HTML/Hw6/css/section2.css
+++ b/HTML/Hw6/css/section2.css
@@ -38,8 +38,8 @@
 
 .figure-img {
     display: block;
-    
-    width: 23.75rem;
+    width: 100%;
+    /* width: 23.75rem; */
     height: 29.375rem;
     margin-bottom: 1.875rem;
 }
@@ -69,7 +69,8 @@
 .figure-socials {
     display: none;
     position: absolute;
-    width: 23.75rem;
+    /* width: 23.75rem; */
+    width: 100%;
     height: 29.375rem;
     top: 0;
     left: 0;
